// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with Recovery codes step because validation is successful and the secret was saved to the database: Recovery codes step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Save your recovery codes
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerSuccess"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Two-factor authentication enabled.
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Don't get locked out
              </div>
              <div
                class="textSection mb32"
              >
                Recovery codes are your last resort for account access if you can't receive two-factor codes. We recommend using a password manager for security. Examples include
                 
                <a
                  href="https://1password.com/"
                  rel="noreferrer"
                  target="_blank"
                >
                  1Password
                </a>
                 
                or
                 
                <a
                  href="https://www.keepersecurity.com/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Keeper
                </a>
                .
              </div>
              <div
                class="recoveryCodesContainer"
              >
                <div
                  class="float-left mr-2"
                >
                  <i
                    class="material-icons"
                  >
                    key
                  </i>
                </div>
                <div
                  class="overflow-hidden"
                >
                  <div
                    class="headingBold"
                  >
                    Recovery Codes
                  </div>
                  <div
                    class="textSection"
                  >
                    Each recovery code is single-use. Reset your authenticator before using all codes or you could be permanently locked out.
                     
                    <a
                      href="https://docs.gorgias.com/en-US/single-sign-on-and-2fa-214445"
                      rel="noreferrer"
                      target="_blank"
                    >
                      Learn More
                    </a>
                    .
                  </div>
                </div>
                <ul
                  class="p-0 m-4"
                >
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh01
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh02
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh03
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh04
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh05
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh06
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh07
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh08
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh09
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh10
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh11
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh12
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh13
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh14
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh15
                  </li>
                  <li
                    class="recoveryCodesItem"
                  >
                    abcdefgh16
                  </li>
                </ul>
                <div
                  class="actionButtonsContainer"
                >
                  <button
                    aria-disabled="false"
                    class="ui-button-wrapper-cef1 actionButton mr8 ui-button-fill-cef1 ui-button-secondary-cef1"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
                    >
                      download
                    </i>
                    <span
                      class="ui-button-content-cef1"
                    >
                      Download
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    class="ui-button-wrapper-cef1 actionButton mr8 ui-button-fill-cef1 ui-button-secondary-cef1"
                    data-clipboard-text="abcdefgh01
abcdefgh02
abcdefgh03
abcdefgh04
abcdefgh05
abcdefgh06
abcdefgh07
abcdefgh08
abcdefgh09
abcdefgh10
abcdefgh11
abcdefgh12
abcdefgh13
abcdefgh14
abcdefgh15
abcdefgh16"
                    id="copyRecoveryCodes"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
                    >
                      content_copy
                    </i>
                    <span
                      class="ui-button-content-cef1"
                    >
                      Copy
                    </span>
                  </button>
                  <a
                    class="actionAnchor"
                    href="http://localhost/2fa/recovery-codes/print"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <button
                      aria-disabled="false"
                      class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
                      >
                        print
                      </i>
                      <span
                        class="ui-button-content-cef1"
                      >
                        Print
                      </span>
                    </button>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:re:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        I Have Saved My Codes
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because saving the secret failed 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    foo error saveTwoFASecret
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-9"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-pending="true"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:rc:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                    <div
                      aria-busy="true"
                      aria-label="Loading..."
                      class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
                      role="status"
                    >
                      <div
                        class="ui-buttonloader-indicator-eacb"
                      />
                    </div>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because validation failed 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    foo error validateVerificationCode
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-7"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-pending="true"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:ra:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                    <div
                      aria-busy="true"
                      aria-label="Loading..."
                      class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
                      role="status"
                    >
                      <div
                        class="ui-buttonloader-indicator-eacb"
                      />
                    </div>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-1"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r2:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step having error banner 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerInfo"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Default initialBannerText
                  </span>
                </div>
              </div>
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Failed to fetch the QR code. Please try again.
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    1
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Have your mobile device ready
              </div>
              <div
                class="textSection mb16"
              >
                Download any authenticator app to your mobile device. Possible options are
                 
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Google Authenticator
                </a>
                ,
                 
                <a
                  href="https://www.microsoft.com/en-us/security/mobile-authenticator-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Microsoft Authenticator
                </a>
                ,
                 
                <a
                  href="https://authy.com/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Authy
                </a>
                , or
                 
                <a
                  href="https://duo.com/product/multi-factor-authentication-mfa/duo-mobile-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Duo
                </a>
                .
              </div>
              <div
                class="stepImage"
              >
                <img
                  alt=""
                  src="test-file-stub"
                />
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Remind Me Later
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r6:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step having renewed secret 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-3"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r4:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with Validate authenticator code step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-5"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r8:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with app setup step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerInfo"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Default initialBannerText
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    1
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Have your mobile device ready
              </div>
              <div
                class="textSection mb16"
              >
                Download any authenticator app to your mobile device. Possible options are
                 
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Google Authenticator
                </a>
                ,
                 
                <a
                  href="https://www.microsoft.com/en-us/security/mobile-authenticator-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Microsoft Authenticator
                </a>
                ,
                 
                <a
                  href="https://authy.com/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Authy
                </a>
                , or
                 
                <a
                  href="https://duo.com/product/multi-factor-authentication-mfa/duo-mobile-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Duo
                </a>
                .
              </div>
              <div
                class="stepImage"
              >
                <img
                  alt=""
                  src="test-file-stub"
                />
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Remind Me Later
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:r0:"
                tabindex="0"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with app setup step after pressing back button 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerInfo"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Default initialBannerText
                  </span>
                </div>
              </div>
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    1
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Have your mobile device ready
              </div>
              <div
                class="textSection mb16"
              >
                Download any authenticator app to your mobile device. Possible options are
                 
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Google Authenticator
                </a>
                ,
                 
                <a
                  href="https://www.microsoft.com/en-us/security/mobile-authenticator-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Microsoft Authenticator
                </a>
                ,
                 
                <a
                  href="https://authy.com/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Authy
                </a>
                , or
                 
                <a
                  href="https://duo.com/product/multi-factor-authentication-mfa/duo-mobile-app"
                  rel="noreferrer"
                  target="_blank"
                >
                  Duo
                </a>
                .
              </div>
              <div
                class="stepImage"
              >
                <img
                  alt=""
                  src="test-file-stub"
                />
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Remind Me Later
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:rk:"
                tabindex="0"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with the QR code step because the code is valid 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify two-factor authentication
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  Password
                </div>
                <div
                  class="line"
                />
                <div
                  class="step previousStep"
                >
                  <span
                    class="stepIndex"
                  >
                    <span
                      class="checkIcon"
                    >
                      <i
                        class="material-icons"
                      >
                        check
                      </i>
                    </span>
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    4
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold mb16"
              >
                Scan the QR code with your authenticator app
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                data-name="box"
                style="flex-direction: column; align-items: center; display: flex;"
              >
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-cef1 ui-button-ghost-cef1 ui-button-primary-cef1"
                  type="button"
                >
                  <span
                    class="ui-button-content-cef1"
                  >
                    Can't scan the QR code?
                  </span>
                </button>
              </div>
              <div
                class="headingBold mt24"
              >
                Enter one-time code below
              </div>
              <div
                class="textSection mb16"
              >
                The unique one-time code will appear that regenerates every 30 seconds.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-25"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Back
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:ru:"
                tabindex="0"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render the modal with a validation code step first on update before other steps 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify your password
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    1
                  </span>
                  Password
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    4
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter a verification code from your authenticator app or a recovery code
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-19"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:rq:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render the modal with an error banner because the code is not valid 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Verify your password
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="wrapper mb-4"
              >
                <div
                  class="step activeStep"
                >
                  <span
                    class="stepIndex"
                  >
                    1
                  </span>
                  Password
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    2
                  </span>
                  App Setup
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    3
                  </span>
                  Verify
                </div>
                <div
                  class="line"
                />
                <div
                  class="step"
                >
                  <span
                    class="stepIndex"
                  >
                    4
                  </span>
                  Recovery Codes
                </div>
              </div>
              <div
                class="headingBold"
              >
                Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter a verification code from your authenticator app or a recovery code
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    data-resizable="false"
                    id="input-text-21"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:rs:"
                tabindex="0"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Continue
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;
